src/app-web/deploy/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: app-web

spec:
  entryPoints:
    - private
  tls:
    certResolver: main
  routes:
    - kind: Rule
      match: Host(`birthday.home.dennisskoko.com`)
      services:
        - name: app-web
          port: http
